--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'One Day';
     src: url("../fonts/ONEDAY/ONEDAY.woff");
@@ -12,6 +13,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 @import url('https://fonts.googleapis.com/css?family=Anonymous+Pro|Bungee|Bungee+Shade|Noto+Sans|Quicksand');
 body {
     font-family: "Work Sans", Arial, sans-serif;
@@ -30,6 +32,202 @@ body {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
+}
+
+.row {
+    max-width: 900px;
+    margin: 20px auto 0;
+    width: 61.8%;
+    float: right;
+    height: 100%;
+    z-index: 300;
+}
+
+.card {
+    float: left;
+    padding: 0 1.7rem;
+    margin-bottom: 4rem;
+    width: 50%;
+}
+
+@media screen and (max-width: 600px) {
+    .card {
+        float: none;
+        padding: 0 1.7rem;
+        width: 100%;
+    }
+}
+
+.card .menu-content {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.card .menu-content::before, .card .menu-content::after {
+    content: '';
+    display: table;
+}
+
+.card .menu-content::after {
+    clear: both;
+}
+
+.card .menu-content li {
+    display: inline-block;
+}
+
+.card .menu-content a {
+    color: #fff;
+}
+
+.card .menu-content span {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    font-size: 10px;
+    font-weight: 700;
+    font-family: 'Open Sans';
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+}
+
+.card .wrapper {
+    background-color: #fff;
+    min-height: 540px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+}
+
+.card .wrapper:hover .data {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+}
+
+.card .data {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    -webkit-transform: translateY(calc(70px + 1em));
+    transform: translateY(calc(70px + 1em));
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.card .data .content {
+    padding: 1em;
+    position: relative;
+    z-index: 1;
+}
+
+.card .author {
+    font-size: 12px;
+}
+
+.card .title {
+    margin-top: 10px;
+}
+
+.card .text {
+    height: 70px;
+    margin: 0;
+}
+
+.card input[type='checkbox'] {
+    display: none;
+}
+
+.card input[type='checkbox']:checked+.menu-content {
+    -webkit-transform: translateY(-60px);
+    transform: translateY(-60px);
+}
+
+.card .wrapper {
+    background-position: center background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.card .wrapper:hover .menu-content span {
+    -webkit-transform: translate(-50%, -10px);
+    transform: translate(-50%, -10px);
+    opacity: 1;
+}
+
+.card .header {
+    color: #fff;
+    padding: 1em;
+}
+
+.card .header::before, .card .header::after {
+    content: '';
+    display: table;
+}
+
+.card .header::after {
+    clear: both;
+}
+
+.card .header .date {
+    float: left;
+    font-size: 12px;
+}
+
+.card .menu-content {
+    float: right;
+}
+
+.card .menu-content li {
+    margin: 0 5px;
+    position: relative;
+}
+
+.card .menu-content span {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    opacity: 0;
+}
+
+.card .data {
+    color: #fff;
+    -webkit-transform: translateY(calc(70px + 4em));
+    transform: translateY(calc(70px + 4em));
+}
+
+.card .title a {
+    color: #fff;
+}
+
+.card .button {
+    display: block;
+    width: 100px;
+    margin: 2em auto 1em;
+    text-align: center;
+    font-size: 12px;
+    color: #fff;
+    line-height: 1;
+    position: relative;
+    font-weight: 700;
+}
+
+.card .button::after {
+    content: '\2192';
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.card .button:hover::after {
+    -webkit-transform: translate(5px, -50%);
+    transform: translate(5px, -50%);
+    opacity: 1;
 }
 
 .offcanvas #page {
@@ -64,8 +262,8 @@ a:hover, a:active, a:focus {
     text-decoration: none;
 }
 
-a:visited{
-  color: #c3c3c3;
+a:visited {
+    color: #c3c3c3;
 }
 
 p, ul, ol {
@@ -431,7 +629,12 @@ h6 {
         width: 100%;
         position: relative;
         z-index: 999;
-        height: 700px;
+        height: 400px;
+    }
+    .row {
+        width: 100%;
+        float: none;
+        margin: 10px auto;
     }
 }
 
@@ -1029,8 +1232,8 @@ pre {
     padding: 10px 20px!important;
 }
 
-#disqus_thread{
-  margin-top: 40px;
+#disqus_thread {
+    margin-top: 40px;
     margin: auto -200px;
     padding: auto 10px;
 }
