--- a/css/style.css
+++ b/css/style.css
@@ -293,28 +293,28 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 h3 {
-    font-family: 'Patrick Hand SC', sans-serif;
+    font-family: 'Patrick Hand SC', cursive;
     margin: 30px auto!important;
     font-weight: 100!important;
     font-size: 50px;
 }
 
 h4 {
-    font-family: 'Indie Flower', 'Bungee', sans-serif!important;
+    font-family: 'Indie Flower', 'Bungee', cursive !important;
     margin: 30px auto!important;
     font-weight: 700;
     font-size: 30px;
 }
 
 h5 {
-    font-family: 'Indie Flower', 'Bungee', sans-serif!important;
+    font-family: 'Indie Flower', 'Bungee', cursive !important;
     margin: 20px auto!important;
     font-weight: 600;
     font-size: 25px;
 }
 
 h6 {
-    font-family: 'Patrick Hand SC', sans-serif!important;
+    font-family: 'Patrick Hand SC', cursive !important;
     margin: 20px auto!important;
     font-size: 16px;
     font-weight: 500;
