--- a/css/style.css
+++ b/css/style.css
@@ -137,12 +137,12 @@ body {
 }
 
 .card .title {
-    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 .card .text {
     height: 70px;
-    margin: 0;
+    margin-bottom: -10px;
 }
 
 .card input[type='checkbox'] {
@@ -212,9 +212,9 @@ body {
 .card .button {
     display: block;
     width: 100px;
-    margin: 2em auto 1em;
+    margin: auto;
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     line-height: 1;
     position: relative;
@@ -335,7 +335,7 @@ h6 {
     background: #ffa929;
 }
 
-.fh5co-nav {
+.nav {
     position: absolute;
     top: 0;
     margin: 0;
@@ -345,23 +345,23 @@ h6 {
     z-index: 1001;
 }
 
-.fh5co-nav .top-menu {
+.nav .top-menu {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     padding: 28px 0;
 }
 
-.fh5co-nav .top {
+.nav .top {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     padding: 7px 0;
     margin-bottom: 0;
 }
 
-.fh5co-nav .top .num, .fh5co-nav .top .fh5co-social {
+.nav .top .num, .nav .top .social {
     display: inline-block;
     margin: 0;
 }
 
-.fh5co-nav .top .num {
+.nav .top .num {
     color: rgba(255, 255, 255, 0.6);
     font-size: 13px;
     padding-right: 20px;
@@ -370,19 +370,19 @@ h6 {
     letter-spacing: 0px;
 }
 
-.fh5co-nav .top .fh5co-social li {
+.nav .top .social li {
     font-size: 14px;
 }
 
-.fh5co-nav .top .fh5co-social li a {
+.nav .top .social li a {
     padding: 0 7px;
 }
 
-.fh5co-nav .top .fh5co-social li a i {
+.nav .top .social li a i {
     font-size: 14px;
 }
 
-.fh5co-nav #fh5co-logo {
+.nav #logo {
     font-size: 24px;
     margin: 0;
     padding: 0;
@@ -392,34 +392,34 @@ h6 {
     font-family: "Noto Sans", Arial, sans-serif;
 }
 
-.fh5co-nav #fh5co-logo a span {
+.nav #logo a span {
     color: #ffa929;
 }
 
-.fh5co-nav a {
+.nav a {
     padding: 5px 10px;
     color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-nav .menu-1 {
+    .nav .menu-1 {
         display: none;
     }
 }
 
-.fh5co-nav ul {
+.nav ul {
     padding: 0;
     margin: 5px 0 0 0;
 }
 
-.fh5co-nav ul li {
+.nav ul li {
     padding: 0;
     margin: 0;
     list-style: none;
     display: inline;
 }
 
-.fh5co-nav ul li a {
+.nav ul li a {
     font-size: 13px;
     padding: 30px 15px;
     text-transform: uppercase;
@@ -430,15 +430,15 @@ h6 {
     transition: 0.5s;
 }
 
-.fh5co-nav ul li a:hover, .fh5co-nav ul li a:focus, .fh5co-nav ul li a:active {
+.nav ul li a:hover, .nav ul li a:focus, .nav ul li a:active {
     color: white;
 }
 
-.fh5co-nav ul li.has-dropdown {
+.nav ul li.has-dropdown {
     position: relative;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown {
+.nav ul li.has-dropdown .dropdown {
     width: 140px;
     -webkit-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
@@ -461,7 +461,7 @@ h6 {
     transition: 0s;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown:before {
+.nav ul li.has-dropdown .dropdown:before {
     bottom: 100%;
     left: 40px;
     border: solid transparent;
@@ -475,16 +475,16 @@ h6 {
     margin-left: -8px;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown li {
+.nav ul li.has-dropdown .dropdown li {
     display: block;
     margin-bottom: 7px;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown li:last-child {
+.nav ul li.has-dropdown .dropdown li:last-child {
     margin-bottom: 0;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown li a {
+.nav ul li.has-dropdown .dropdown li a {
     padding: 2px 0;
     display: block;
     color: #999999;
@@ -494,19 +494,19 @@ h6 {
     letter-spacing: 0;
 }
 
-.fh5co-nav ul li.has-dropdown .dropdown li a:hover {
+.nav ul li.has-dropdown .dropdown li a:hover {
     color: #fff;
 }
 
-.fh5co-nav ul li.has-dropdown:hover a, .fh5co-nav ul li.has-dropdown:focus a {
+.nav ul li.has-dropdown:hover a, .nav ul li.has-dropdown:focus a {
     color: #fff;
 }
 
-.fh5co-nav ul li.btn-cta a {
+.nav ul li.btn-cta a {
     color: #fff;
 }
 
-.fh5co-nav ul li.btn-cta a span {
+.nav ul li.btn-cta a span {
     background: #ffa929;
     padding: 4px 20px;
     display: -moz-inline-stack;
@@ -522,39 +522,39 @@ h6 {
     border-radius: 100px;
 }
 
-.fh5co-nav ul li.btn-cta a:hover span {
+.nav ul li.btn-cta a:hover span {
     -webkit-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
 }
 
-.fh5co-nav ul li.active>a {
+.nav ul li.active>a {
     color: #fff !important;
 }
 
-.fh5co-navigation .prev {
+.navigation .prev {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
     text-align: right;
 }
 
-.fh5co-navigation .prev:hover {
+.navigation .prev:hover {
     padding-right: 30px;
 }
 
-.fh5co-navigation .next {
+.navigation .next {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
     text-align: left;
 }
 
-.fh5co-navigation .next:hover {
+.navigation .next:hover {
     padding-left: 30px;
 }
 
-.fh5co-navigation .fh5co-cover {
+.navigation .cover {
     width: 50%;
     float: left;
     background-size: cover;
@@ -563,7 +563,7 @@ h6 {
     position: relative;
 }
 
-.fh5co-navigation .fh5co-cover .overlay {
+.navigation .cover .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -573,28 +573,28 @@ h6 {
     z-index: 10;
 }
 
-.fh5co-navigation .fh5co-cover .copy {
+.navigation .cover .copy {
     position: relative;
     z-index: 12;
     display: block;
 }
 
-.fh5co-navigation .fh5co-cover .copy .display-t, .fh5co-navigation .fh5co-cover .copy .display-tc {
+.navigation .cover .copy .display-t, .navigation .cover .copy .display-tc {
     height: 400px;
     display: table;
     width: 100%;
 }
 
-.fh5co-navigation .fh5co-cover .copy .display-tc {
+.navigation .cover .copy .display-tc {
     display: table-cell !important;
     vertical-align: middle;
 }
 
-.fh5co-navigation .fh5co-cover .copy .display-tc div {
+.navigation .cover .copy .display-tc div {
     padding: 30px;
 }
 
-.fh5co-navigation .fh5co-cover .copy .display-tc div span {
+.navigation .cover .copy .display-tc div span {
     display: block;
     margin-bottom: 10px;
     color: rgba(255, 255, 255, 0.5);
@@ -603,13 +603,13 @@ h6 {
     letter-spacing: .05em;
 }
 
-.fh5co-navigation .fh5co-cover .copy .display-tc div h2 {
+.navigation .cover .copy .display-tc div h2 {
     margin-bottom: 0;
     color: #fff;
     font-weight: 300;
 }
 
-#fh5co-aside {
+#aside {
     width: 38.2%;
     top: 0;
     left: 0;
@@ -622,22 +622,22 @@ h6 {
     background-position: center center;
 }
 
-.single #fh5co-aside {
+.single #aside {
     position: relative;
     height: 700px;
     width: 100%;
 }
 
-#fh5co-aside a {
+#aside a {
     color: rgba(255, 255, 255, 0.5);
 }
 
-#fh5co-aside a:hover {
+#aside a:hover {
     color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-    #fh5co-aside {
+    #aside {
         width: 100%;
         position: relative;
         z-index: 999;
@@ -650,7 +650,7 @@ h6 {
     }
 }
 
-#fh5co-aside .overlay {
+#aside .overlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -660,29 +660,29 @@ h6 {
     background: rgba(0, 0, 0, 0.5);
 }
 
-#fh5co-aside .featured, #fh5co-aside nav, #fh5co-aside .page-title {
+#aside .featured, #aside nav, #aside .page-title {
     z-index: 12;
     position: absolute;
     bottom: 0;
     padding: 30px;
 }
 
-.single #fh5co-aside .featured, .single #fh5co-aside nav, .single #fh5co-aside .page-title {
+.single #aside .featured, .single #aside nav, .single #aside .page-title {
     width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 
-#fh5co-aside .featured h2, #fh5co-aside nav h2, #fh5co-aside .page-title h2 {
+#aside .featured h2, #aside nav h2, #aside .page-title h2 {
     color: #fff;
     font-weight: 300;
 }
 
-.single #fh5co-aside .featured h2, .single #fh5co-aside nav h2, .single #fh5co-aside .page-title h2 {
+.single #aside .featured h2, .single #aside nav h2, .single #aside .page-title h2 {
     font-size: 72px;
 }
 
-#fh5co-aside .featured>span, #fh5co-aside nav>span, #fh5co-aside .page-title>span {
+#aside .featured>span, #aside nav>span, #aside .page-title>span {
     display: block;
     color: rgba(255, 255, 255, 0.5);
     text-transform: uppercase;
@@ -691,7 +691,7 @@ h6 {
     margin-bottom: 10px;
 }
 
-#fh5co-aside .page-title img {
+#aside .page-title img {
     margin-bottom: 30px;
     width: 80px;
     -webkit-border-radius: 50%;
@@ -700,27 +700,27 @@ h6 {
     border-radius: 50%;
 }
 
-#fh5co-aside nav {
+#aside nav {
     top: 0;
     bottom: inherit !important;
 }
 
-.single #fh5co-aside nav {
+.single #aside nav {
     text-align: left;
 }
 
-#fh5co-aside nav ul {
+#aside nav ul {
     padding: 0;
     margin: 0;
 }
 
-#fh5co-aside nav ul li {
+#aside nav ul li {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-#fh5co-aside nav ul li a {
+#aside nav ul li a {
     font-size: 14px;
     text-transform: uppercase;
     position: relative;
@@ -736,7 +736,7 @@ h6 {
     background: rgba(255, 255, 255, 0.1);
 }
 
-#fh5co-aside nav ul li a:hover {
+#aside nav ul li a:hover {
     color: #000;
     background: white;
 }
@@ -754,25 +754,25 @@ footer {
     text-align: center;
 }
 
-#fh5co-main-content {
+#main-content {
     margin-left: 38.1966%;
     position: relative;
     z-index: 999;
 }
 
-.single #fh5co-main-content {
+.single #main-content {
     margin-left: 0;
     max-width: 960px;
     margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
-    #fh5co-main-content {
+    #main-content {
         margin-left: 0;
     }
 }
 
-.fh5co-post-date {
+.post-date {
     color: #b3b3b3;
     margin-bottom: 10px;
     display: block;
@@ -791,22 +791,22 @@ footer {
     }
 }
 
-.fh5co-post .fh5co-entry {
+.post .entry {
     width: 100%;
     border-bottom: 1px solid #f2f2f2;
 }
 
-.single .fh5co-post .fh5co-entry {
+.single .post .entry {
     border-bottom: none !important;
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-post .fh5co-entry {
+    .post .entry {
         text-align: left;
     }
 }
 
-.fh5co-post .fh5co-entry>img {
+.post .entry>img {
     float: right;
     width: 10%;
     margin-bottom: 30px;
@@ -817,51 +817,51 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-post .fh5co-entry>img {
+    .post .entry>img {
         float: none;
         width: 50%;
     }
 }
 
-.fh5co-post .fh5co-entry>div {
+.post .entry>div {
     width: 77%;
     float: left;
     margin-right: 5%;
     margin-top: 0px;
 }
 
-.single .fh5co-post .fh5co-entry>div {
+.single .post .entry>div {
     margin-right: 0 !important;
     width: 100%;
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-post .fh5co-entry>div {
+    .post .entry>div {
         width: 100%;
         margin-right: 0;
     }
 }
 
-.fh5co-post .fh5co-entry>div a {
+.post .entry>div a {
     color: #000;
 }
 
-.fh5co-post .fh5co-entry>div a:hover {
+.post .entry>div a:hover {
     color: #ffa929;
 }
 
-.fh5co-post .fh5co-entry>div h2 {
+.post .entry>div h2 {
     margin-bottom: 10px;
     font-weight: 100;
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-post .fh5co-entry>div h2 {
+    .post .entry>div h2 {
         font-size: 24px;
     }
 }
 
-.fh5co-post .fh5co-entry>div p:last-child {
+.post .entry>div p:last-child {
     margin-bottom: 0;
 }
 
@@ -906,23 +906,23 @@ footer {
     outline: none;
 }
 
-.fh5co-nav-toggle {
+.nav-toggle {
     width: 25px;
     height: 25px;
     cursor: pointer;
     text-decoration: none;
 }
 
-.fh5co-nav-toggle.active i::before, .fh5co-nav-toggle.active i::after {
+.nav-toggle.active i::before, .nav-toggle.active i::after {
     background: #444;
 }
 
-.fh5co-nav-toggle:hover, .fh5co-nav-toggle:focus, .fh5co-nav-toggle:active {
+.nav-toggle:hover, .nav-toggle:focus, .nav-toggle:active {
     outline: none;
     border-bottom: none !important;
 }
 
-.fh5co-nav-toggle i {
+.nav-toggle i {
     position: relative;
     display: inline-block;
     width: 25px;
@@ -935,7 +935,7 @@ footer {
     transition: all .2s ease-out;
 }
 
-.fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {
+.nav-toggle i::before, .nav-toggle i::after {
     content: '';
     width: 25px;
     height: 2px;
@@ -945,36 +945,36 @@ footer {
     transition: all .2s ease-out;
 }
 
-.fh5co-nav-toggle.fh5co-nav-white>i {
+.nav-toggle.nav-white>i {
     color: #fff;
     background: #fff;
 }
 
-.fh5co-nav-toggle.fh5co-nav-white>i::before, .fh5co-nav-toggle.fh5co-nav-white>i::after {
+.nav-toggle.nav-white>i::before, .nav-toggle.nav-white>i::after {
     background: #fff;
 }
 
-.fh5co-nav-toggle i::before {
+.nav-toggle i::before {
     top: -7px;
 }
 
-.fh5co-nav-toggle i::after {
+.nav-toggle i::after {
     bottom: -7px;
 }
 
-.fh5co-nav-toggle:hover i::before {
+.nav-toggle:hover i::before {
     top: -10px;
 }
 
-.fh5co-nav-toggle:hover i::after {
+.nav-toggle:hover i::after {
     bottom: -10px;
 }
 
-.fh5co-nav-toggle.active i {
+.nav-toggle.active i {
     background: transparent;
 }
 
-.fh5co-nav-toggle.active i::before {
+.nav-toggle.active i::before {
     top: 0;
     -webkit-transform: rotateZ(45deg);
     -moz-transform: rotateZ(45deg);
@@ -983,7 +983,7 @@ footer {
     transform: rotateZ(45deg);
 }
 
-.fh5co-nav-toggle.active i::after {
+.nav-toggle.active i::after {
     bottom: 0;
     -webkit-transform: rotateZ(-45deg);
     -moz-transform: rotateZ(-45deg);
@@ -992,7 +992,7 @@ footer {
     transform: rotateZ(-45deg);
 }
 
-.fh5co-nav-toggle {
+.nav-toggle {
     position: absolute;
     right: 0px;
     top: 65px;
@@ -1008,7 +1008,7 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    .fh5co-nav-toggle {
+    .nav-toggle {
         display: block;
     }
 }
@@ -1218,7 +1218,7 @@ footer {
     padding-bottom: 2em !important;
 }
 
-.fh5co-loader {
+.loader {
     position: fixed;
     left: 0px;
     top: 0px;
